--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -85,12 +85,13 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Jingze Huo, Qingyuan Chen
 - [📕 slides](./slides/241126-BIZA.pdf), [📺 video](https://www.bilibili.com/video/BV1NXzVYpEpo) 
 
-### 🔥 December 03
+### December 03
 
 - 💡 [SOSP'24] [LoongServe: Efficiently Serving Long-Context Large Language Models with Elastic Sequence Parallelism](https://dl.acm.org/doi/10.1145/3694715.3695948)
 - 🙎‍♂️ Zewen Jin, Hongrui Zhan, Shen Fu
+- [📕 slides](./slides/241203-LoongServe.pdf), [📺 video](https://www.bilibili.com/video/BV1NUzRYTETw) 
 
-### December 10
+### 🔥 December 10
 
 - 💡 [SOSP'24] [PowerInfer: Fast Large Language Model Serving with a Consumer-grade GPU](https://dl.acm.org/doi/10.1145/3694715.3695964)
 - 🙎‍♂️ Haiquan Wang, Jia He, Jiaqi Ruan
@@ -102,13 +103,11 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### December 24
 
-- 💡 [OSDI'23] [Effectively Scheduling Computational Graphs of Deep Neural Networks toward Their Domain-Specific Accelerators](https://www.usenix.org/system/files/osdi23-zhao.pdf)
-- 🙎‍♂️ Shiyi Wang, Jingbo Su
+- 💡 
+- 🙎‍♂️ Yinhe Chen
 
 ### December 31
 
-- 💡 
-- 🙎‍♂️ Yinhe Chen
 
 ### January 7
 
