--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -91,20 +91,21 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Zewen Jin, Hongrui Zhan, Shen Fu
 - [📕 slides](./slides/241203-LoongServe.pdf), [📺 video](https://www.bilibili.com/video/BV1NUzRYTETw) 
 
-### 🔥 December 10
+### December 10
 
 - 💡 [SOSP'24] [PowerInfer: Fast Large Language Model Serving with a Consumer-grade GPU](https://dl.acm.org/doi/10.1145/3694715.3695964)
 - 🙎‍♂️ Haiquan Wang, Jia He, Jiaqi Ruan
+- [📕 slides](./slides/241210-PowerInfer.pdf), [📺 video](https://www.bilibili.com/video/BV1A2qbYREnT) 
 
-### December 17
+### 🔥 December 17
 
 - 💡 [OSDI'24] [Motor: Enabling Multi-Versioning for Distributed Transactions on Disaggregated Memory](https://www.usenix.org/system/files/osdi24-zhang-ming.pdf)
 - 🙎‍♂️ Sen Han
 
 ### December 24
 
-- 💡 
-- 🙎‍♂️ Yinhe Chen
+- 💡 [OSDI'24] [Taming Throughput-Latency Tradeoff in LLM Inference with Sarathi-Serve](https://www.usenix.org/system/files/osdi24-agrawal.pdf)
+- 🙎‍♂️ Yinhe Chen, Dongqi Tian
 
 ### December 31
 
