--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -101,6 +101,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [OSDI'24] [Motor: Enabling Multi-Versioning for Distributed Transactions on Disaggregated Memory](https://www.usenix.org/system/files/osdi24-zhang-ming.pdf)
 - 🙎‍♂️ Sen Han
+- [📕 slides](./slides/241217-Motor.pdf)
 
 ### December 24
 
