--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -89,7 +89,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [SOSP'24] [LoongServe: Efficiently Serving Long-Context Large Language Models with Elastic Sequence Parallelism](https://dl.acm.org/doi/10.1145/3694715.3695948)
 - 🙎‍♂️ Zewen Jin, Hongrui Zhan, Shen Fu
-- [📕 slides](./slides/241203-LoongServe.pdf), [📺 video](https://www.bilibili.com/video/BV1NUzRYTETw) 
+- [📕 slides](./slides/241203-LoongServe.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/13208746660), [📺 video](https://www.bilibili.com/video/BV1NUzRYTETw) 
 
 ### December 10
 
@@ -97,13 +97,13 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Haiquan Wang, Jia He, Jiaqi Ruan
 - [📕 slides](./slides/241210-PowerInfer.pdf), [📺 video](https://www.bilibili.com/video/BV1A2qbYREnT) 
 
-### 🔥 December 17
+### December 17
 
 - 💡 [OSDI'24] [Motor: Enabling Multi-Versioning for Distributed Transactions on Disaggregated Memory](https://www.usenix.org/system/files/osdi24-zhang-ming.pdf)
 - 🙎‍♂️ Sen Han
-- [📕 slides](./slides/241217-Motor.pdf)
+- [📕 slides](./slides/241217-Motor.pdf), [📺 video](https://www.bilibili.com/video/BV1hJkHYZE4M) 
 
-### December 24
+### 🔥 December 24
 
 - 💡 [OSDI'24] [Taming Throughput-Latency Tradeoff in LLM Inference with Sarathi-Serve](https://www.usenix.org/system/files/osdi24-agrawal.pdf)
 - 🙎‍♂️ Yinhe Chen, Dongqi Tian
