--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -95,7 +95,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [SOSP'24] [PowerInfer: Fast Large Language Model Serving with a Consumer-grade GPU](https://dl.acm.org/doi/10.1145/3694715.3695964)
 - 🙎‍♂️ Haiquan Wang, Jia He, Jiaqi Ruan
-- [📕 slides](./slides/241210-PowerInfer.pdf), [📺 video](https://www.bilibili.com/video/BV1A2qbYREnT) 
+- [📕 slides](./slides/241210-PowerInfer.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/14402430046), [📺 video](https://www.bilibili.com/video/BV1A2qbYREnT) 
 
 ### December 17
 
@@ -103,19 +103,16 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Sen Han
 - [📕 slides](./slides/241217-Motor.pdf), [📺 video](https://www.bilibili.com/video/BV1hJkHYZE4M) 
 
-### 🔥 December 24
+### December 24
 
 - 💡 [OSDI'24] [Taming Throughput-Latency Tradeoff in LLM Inference with Sarathi-Serve](https://www.usenix.org/system/files/osdi24-agrawal.pdf)
 - 🙎‍♂️ Yinhe Chen, Dongqi Tian
+- [📕 slides](./slides/241224-Sarathi.pdf), [📺 video](https://www.bilibili.com/video/BV1jMCtYWEbq) 
 
 ### December 31
 
 
-### January 7
+### 🔥 January 7
 
 - 💡 [OSDI'24] [DistServe: Disaggregating Prefill and Decoding for Goodput-optimized Large Language Model Serving](https://www.usenix.org/system/files/osdi24-zhong-yinmin.pdf)
 - 🙎‍♂️ Mingxuan Liu **(NPU, Northwestern Polytechnical University)**
-
-### January 14
-
-### January 21
