--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -101,16 +101,13 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [OSDI'24] [Motor: Enabling Multi-Versioning for Distributed Transactions on Disaggregated Memory](https://www.usenix.org/system/files/osdi24-zhang-ming.pdf)
 - 🙎‍♂️ Sen Han
-- [📕 slides](./slides/241217-Motor.pdf), [📺 video](https://www.bilibili.com/video/BV1hJkHYZE4M) 
+- [📕 slides](./slides/241217-Motor.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/15998395738), [📺 video](https://www.bilibili.com/video/BV1hJkHYZE4M) 
 
 ### December 24
 
 - 💡 [OSDI'24] [Taming Throughput-Latency Tradeoff in LLM Inference with Sarathi-Serve](https://www.usenix.org/system/files/osdi24-agrawal.pdf)
 - 🙎‍♂️ Yinhe Chen, Dongqi Tian
-- [📕 slides](./slides/241224-Sarathi.pdf), [📺 video](https://www.bilibili.com/video/BV1jMCtYWEbq) 
-
-### December 31
-
+- [📕 slides](./slides/241224-Sarathi.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/16742425732), [📺 video](https://www.bilibili.com/video/BV1jMCtYWEbq) 
 
 ### 🔥 January 7
 
