--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -113,4 +113,4 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [OSDI'24] [DistServe: Disaggregating Prefill and Decoding for Goodput-optimized Large Language Model Serving](https://www.usenix.org/system/files/osdi24-zhong-yinmin.pdf)
 - 🙎‍♂️ Mingxuan Liu **(NPU, Northwestern Polytechnical University)**
-- [📕 slides](./slides/250107-DistServe.pdf), [📺 video](https://www.bilibili.com/video/BV1MGrrY3EM8) 
+- [📕 slides](./slides/250107-DistServe.pdf),[📃 Q&A summary](https://zhuanlan.zhihu.com/p/18042967757), [📺 video](https://www.bilibili.com/video/BV1MGrrY3EM8) 
