--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -12,13 +12,12 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ## Schedule
 
-### September 16
+### October 14
 
-- 💡 ...
+- 💡 Kick-off meeting
 - 🙎‍♂️ ...
-- [📕 MLA slides]
-- [📃 Q&A summary]
-- [📺 video]
+- 📕
+
 
 
 
