25 Fall: 250916 Slides Update

--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -15,8 +15,8 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 ### September 16
 
 - 💡 Kick-off meeting
-- 🙎‍♂️ ...
-- 📕
+- 🙎‍♂️ Youhui Bai, Zhihui Chen, Ouxiang Zhou and Ruibo Liu
+- [📕 slides](./slides/250916-kick-off.pdf)
 
 
 
