--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -18,6 +18,12 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Youhui Bai, Zhihui Chen, Ouxiang Zhou and Ruibo Liu
 - [📕 slides](./slides/250916-kick-off.pdf)
 
+### September 29
+
+- ✨ SOSP Rehearsal
+- 💡 Mantle: Efficient Hierarchical Metadata Management for Cloud Object Storage Services
+- 🙎‍♂️ Jiahao Li
+
 
 
 
