--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -11,18 +11,24 @@
 The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a> as soon as possible.
 
 ## Schedule
+### October 21
 
+- 💡 ServeGen: Workload Characterization and Generation of Large Language Model Serving in Production[arXiv]
+- 🙎‍♂️ Zijian Dai
+  
+### September 29
+
+- ✨ SOSP Rehearsal
+- 💡 Mantle: Efficient Hierarchical Metadata Management for Cloud Object Storage Services
+- 🙎‍♂️ Jiahao Li
+  
 ### September 16
 
 - 💡 Kick-off meeting
 - 🙎‍♂️ Youhui Bai, Zhihui Chen, Ouxiang Zhou and Ruibo Liu
 - [📕 slides](./slides/250916-kick-off.pdf)
 
-### September 29
 
-- ✨ SOSP Rehearsal
-- 💡 Mantle: Efficient Hierarchical Metadata Management for Cloud Object Storage Services
-- 🙎‍♂️ Jiahao Li
 
 
 
