--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -13,8 +13,9 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 ## Schedule
 ### October 21
 
-- 💡 ServeGen: Workload Characterization and Generation of Large Language Model Serving in Production[arXiv]
+- 💡 - 💡 [ServeGen: Workload Characterization and Generation of Large Language Model Serving in Production [arXiv]](https://arxiv.org/abs/2505.09999)
 - 🙎‍♂️ Zijian Dai
+- [📕 slides](./slides/251021-ServeGen.pdf)
   
 ### September 29
 
