--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -11,17 +11,30 @@
 The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a> as soon as possible.
 
 ## Schedule
-### October 21
 
-- 💡 - 💡 [ServeGen: Workload Characterization and Generation of Large Language Model Serving in Production [arXiv]](https://arxiv.org/abs/2505.09999)
+### October 28
+
+#### Topic Ⅰ
+- 💡 [OSDI'25] [Neutrino: Fine-grained GPU Kernel Profiling via Programmable Probing](https://www.usenix.org/system/files/osdi25-huang-songlin.pdf)					
+- 🙎‍♂️ Yuming Xu
+
+#### Topic Ⅱ
+- 💡 [arXiv] [Shift Parallelism: Low-Latency, High-Throughput LLM Inference for Dynamic Workloads](https://arxiv.org/pdf/2509.16495)
+- 🙎‍♂️ Jiaan Zhu, Qinghe Wang, Long Zhao
+
+
+### October 21
+- 💡 [arXiv] [ServeGen: Workload Characterization and Generation of Large Language Model Serving in Production](https://arxiv.org/abs/2505.09999)
 - 🙎‍♂️ Zijian Dai
-- [📕 slides](./slides/251021-ServeGen.pdf)
+- [📕 slides](./slides/251021-ServeGen.pdf), [📺 video](https://www.bilibili.com/video/BV1xLsyz7EJv?t=4.7)
+
   
 ### September 29
 
 - ✨ SOSP Rehearsal
 - 💡 Mantle: Efficient Hierarchical Metadata Management for Cloud Object Storage Services
 - 🙎‍♂️ Jiahao Li
+
   
 ### September 16
 
