--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -11,11 +11,21 @@
 The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a> as soon as possible.
 
 ## Schedule
+### November 4
+#### Topic I
+- 💡 [OSDI'25] [Enabling Efficient GPU Communication over Multiple NICs with FuseLink](https://www.usenix.org/system/files/osdi25-ren.pdf)
+- 🙎‍♂️ Haiquan Wang, Tonghuan Xiao, Jiahui Tan	
+
+#### Topic II
+- 💡 [arXiv] [Fast-dLLM v2: Efficient Block-Diffusion LLM](https://arxiv.org/pdf/2509.26328)
+- 🙎‍♂️ Xiliang Xian		
+<br><br>
 
 ### October 28
 
 - 💡 [arXiv] [Shift Parallelism: Low-Latency, High-Throughput LLM Inference for Dynamic Workloads](https://arxiv.org/pdf/2509.16495)
 - 🙎‍♂️ Jiaan Zhu, Qinghe Wang, Long Zhao
+- [📕 slides](./slides/251028-ShiftParallelism.pdf), [📺 video](https://www.bilibili.com/video/BV1v91TBbEhW?t=8.9)
 <br><br>
 
 ### October 21
