--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -11,6 +11,16 @@
 The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a> as soon as possible.
 
 ## Schedule
+### November 11
+#### Topic I
+- 💡 [arXiv] [FalconFS: Distributed File System for Large-Scale Deep Learning Pipeline](https://arxiv.org/pdf/2507.10367)
+- 🙎‍♂️ chi zhang，Jiahao Li	
+		
+#### Topic II
+- 💡 [OSDI'25] [Stripeless Data Placement for Erasure-Coded In-Memory Storage](https://www.usenix.org/system/files/osdi25-gao.pdf)
+- 🙎‍♂️ Jingze Huo				
+<br><br>
+
 ### November 4
 #### Topic I
 - 💡 [OSDI'25] [Enabling Efficient GPU Communication over Multiple NICs with FuseLink](https://www.usenix.org/system/files/osdi25-ren.pdf)
@@ -18,7 +28,8 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 #### Topic II
 - 💡 [arXiv] [Fast-dLLM v2: Efficient Block-Diffusion LLM](https://arxiv.org/pdf/2509.26328)
-- 🙎‍♂️ Xiliang Xian		
+- 🙎‍♂️ Xiliang Xian
+- [📕 slides](./slides/251104-FastDLLMv2.pdf),
 <br><br>
 
 ### October 28
