--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -24,7 +24,8 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 ### November 4
 #### Topic I
 - 💡 [OSDI'25] [Enabling Efficient GPU Communication over Multiple NICs with FuseLink](https://www.usenix.org/system/files/osdi25-ren.pdf)
-- 🙎‍♂️ Haiquan Wang, Tonghuan Xiao, Jiahui Tan	
+- 🙎‍♂️ Haiquan Wang, Tonghuan Xiao, Jiahui Tan
+- [📕 slides](./slides/251104-FuseLink.pdf),
 
 #### Topic II
 - 💡 [arXiv] [Fast-dLLM v2: Efficient Block-Diffusion LLM](https://arxiv.org/pdf/2509.26328)
