--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -20,12 +20,12 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic I
 - 💡 [OSDI'25] [Enabling Efficient GPU Communication over Multiple NICs with FuseLink](https://www.usenix.org/system/files/osdi25-ren.pdf)
 - 🙎‍♂️ Haiquan Wang, Tonghuan Xiao, Jiahui Tan
-- [📕 slides](./slides/251104-FuseLink.pdf),
+- [📕 slides](./slides/251104-FuseLink.pdf),[📺 video](https://www.bilibili.com/video/BV1mbkRBgEJr)
 
 #### Topic II
 - 💡 [arXiv] [Fast-dLLM v2: Efficient Block-Diffusion LLM](https://arxiv.org/pdf/2509.26328)
 - 🙎‍♂️ Xiliang Xian
-- [📕 slides](./slides/251104-FastDLLMv2.pdf),
+- [📕 slides](./slides/251104-FastDLLMv2.pdf),[📺 video](https://www.bilibili.com/video/BV1mbkRBgEJr)
 <br><br>
 
 ### October 28
