--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -11,9 +11,20 @@
 The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a> as soon as possible.
 
 ## Schedule
+### November 18
+#### Topic I
+- 💡 [arXiv] [HydraServe: Minimizing Cold Start Latency for Serverless LLM Serving in Public Clouds](https://arxiv.org/pdf/2502.15524v2)
+- 🙎‍♂️ Jiyang Wang
+
+#### Topic II
+- 💡 [SOSP '25] [Pie: A Programmable Serving System for Emerging LLM Applications](https://www.yecl.org/publications/gim2025sosp.pdf)
+- 🙎‍♂️ Shen Fu, Zewen Jin
+<br><br>
+
 ### November 11
 - 💡 [arXiv] [FalconFS: Distributed File System for Large-Scale Deep Learning Pipeline](https://arxiv.org/pdf/2507.10367)
-- 🙎‍♂️ chi zhang，Jiahao Li	
+- 🙎‍♂️ chi zhang，Jiahao Li
+- [📕 slides](),[📺 video](https://www.bilibili.com/video/BV1pHCEBAEWN?t=2.4)
 <br><br>
 
 ### November 4
