Update links for November 11 event

--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -24,7 +24,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 ### November 11
 - 💡 [arXiv] [FalconFS: Distributed File System for Large-Scale Deep Learning Pipeline](https://arxiv.org/pdf/2507.10367)
 - 🙎‍♂️ chi zhang，Jiahao Li
-- [📕 slides](),[📺 video](https://www.bilibili.com/video/BV1pHCEBAEWN?t=2.4)
+- [📕 slides](./slides/251111-FalconFS.pdf),[📺 video](https://www.bilibili.com/video/BV1pHCEBAEWN?t=2.4)
 <br><br>
 
 ### November 4
