--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -11,10 +11,21 @@
 The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a> as soon as possible.
 
 ## Schedule
+### November 25
+#### Topic I
+- 💡 
+- 🙎‍♂️ Alibaba ROLL
+
+#### Topic II
+- 💡 [SOSP '25] [Spirit: Fair Allocation of Interdependent Resources in Remote Memory Systems](https://dl.acm.org/doi/pdf/10.1145/3731569.3764805)
+- 🙎‍♂️ Yicheng Zhang
+<br><br>
+
 ### November 18
 #### Topic I
 - 💡 [arXiv] [HydraServe: Minimizing Cold Start Latency for Serverless LLM Serving in Public Clouds](https://arxiv.org/pdf/2502.15524v2)
 - 🙎‍♂️ Jiyang Wang
+- [📕 slides](./slides/251118_HydraServer.pdf)
 
 #### Topic II
 - 💡 [SOSP '25] [Pie: A Programmable Serving System for Emerging LLM Applications](https://www.yecl.org/publications/gim2025sosp.pdf)
