--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -13,8 +13,8 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 ## Schedule
 ### November 25
 #### Topic I
-- 💡 
-- 🙎‍♂️ Alibaba ROLL
+- 💡 [ROLL: An Efficient and User-Friendly Scaling Library for Reinforcement Learning with Large Language Models](https://github.com/alibaba/ROLL)
+- 🙎‍♂️ Alibaba ROLL  
 
 #### Topic II
 - 💡 [SOSP '25] [Spirit: Fair Allocation of Interdependent Resources in Remote Memory Systems](https://dl.acm.org/doi/pdf/10.1145/3731569.3764805)
