--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -25,11 +25,12 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic I
 - 💡 [arXiv] [HydraServe: Minimizing Cold Start Latency for Serverless LLM Serving in Public Clouds](https://arxiv.org/pdf/2502.15524v2)
 - 🙎‍♂️ Jiyang Wang
-- [📕 slides](./slides/251118_HydraServer.pdf)
+- [📕 slides](./slides/251118_HydraServer.pdf),[📺 video](https://www.bilibili.com/video/BV1SzUsBkEXQ?t=0.8)
 
 #### Topic II
 - 💡 [SOSP '25] [Pie: A Programmable Serving System for Emerging LLM Applications](https://www.yecl.org/publications/gim2025sosp.pdf)
 - 🙎‍♂️ Shen Fu, Zewen Jin
+- [📕 slides](./slides/20251118_Pie.pdf),[📺 video](https://www.bilibili.com/video/BV1SzUsBkEXQ?t=0.8)
 <br><br>
 
 ### November 11
