--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -11,14 +11,26 @@
 The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a> as soon as possible.
 
 ## Schedule
+### December 2
+#### Topic I
+- 💡 [arXiv][dInfer: An Efficient Inference Framework for Diffusion Language Models](https://arxiv.org/pdf/2510.08666)
+- 🙎‍♂️ Yuxin Ma
+
+#### Topic II
+- 💡 
+- 🙎‍♂️ Ping Gong, Xin Ren
+<br><br>
+
 ### November 25
 #### Topic I
 - 💡 [ROLL: An Efficient and User-Friendly Scaling Library for Reinforcement Learning with Large Language Models](https://github.com/alibaba/ROLL)
-- 🙎‍♂️ Alibaba ROLL  
+- 🙎‍♂️ Alibaba ROLL
+- [📕 slides](./slides/),[📺 video](https://www.bilibili.com/video/BV1uxUzBUED4?t=9.2)
 
 #### Topic II
 - 💡 [SOSP '25] [Spirit: Fair Allocation of Interdependent Resources in Remote Memory Systems](https://dl.acm.org/doi/pdf/10.1145/3731569.3764805)
 - 🙎‍♂️ Yicheng Zhang
+- [📕 slides](./slides/251125_Spirit.pdf),[📺 video](https://www.bilibili.com/video/BV19JUzBXEM2)
 <br><br>
 
 ### November 18
