--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -13,7 +13,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 ## Schedule
 ### December 2
 #### Topic I
-- 💡 [arXiv][dInfer: An Efficient Inference Framework for Diffusion Language Models](https://arxiv.org/pdf/2510.08666)
+- 💡 [arXiv] [dInfer: An Efficient Inference Framework for Diffusion Language Models](https://arxiv.org/pdf/2510.08666)
 - 🙎‍♂️ Yuxin Ma
 
 #### Topic II
@@ -24,8 +24,8 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 ### November 25
 #### Topic I
 - 💡 [ROLL: An Efficient and User-Friendly Scaling Library for Reinforcement Learning with Large Language Models](https://github.com/alibaba/ROLL)
-- 🙎‍♂️ Alibaba ROLL
-- [📕 slides](./slides/),[📺 video](https://www.bilibili.com/video/BV1uxUzBUED4?t=9.2)
+- 🙎‍♂️ Wei Gao (Alibaba ROLL)
+- [📕 slides](./slides/251125_ROLL.pdf),[📺 video](https://www.bilibili.com/video/BV1uxUzBUED4?t=9.2)
 
 #### Topic II
 - 💡 [SOSP '25] [Spirit: Fair Allocation of Interdependent Resources in Remote Memory Systems](https://dl.acm.org/doi/pdf/10.1145/3731569.3764805)
