--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -17,7 +17,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Yuxin Ma
 
 #### Topic II
-- 💡 
+- 💡 [arXiv] [Kimi Linear: An Expressive, Efficient Attention Architecture](https://arxiv.org/pdf/2510.26692)
 - 🙎‍♂️ Ping Gong, Xin Ren
 <br><br>
 
