--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -14,7 +14,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 ### December 2
 #### Topic I
 - 💡 [arXiv] [dInfer: An Efficient Inference Framework for Diffusion Language Models](https://arxiv.org/pdf/2510.08666)
-- 🙎‍♂️ Yuxin Ma
+- 🙎‍♂️ Yuxin Ma (Ant Group)
 
 #### Topic II
 - 💡 [arXiv] [Kimi Linear: An Expressive, Efficient Attention Architecture](https://arxiv.org/pdf/2510.26692)
