--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -11,14 +11,26 @@
 The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a> as soon as possible.
 
 ## Schedule
+### December 9
+#### Topic I
+- 💡 [arXiv] [NanoFlow: Towards Optimal Large Language Model Serving Throughput](https://arxiv.org/pdf/2408.12757)
+- 🙎‍♂️ Yinhe Chen
+
+#### Topic II
+- 💡 [arXiv] [IC-Cache: Efficient Large Language Model Serving via In-context Caching](https://arxiv.org/pdf/2501.12689)
+- 🙎‍♂️ Sen Han
+<br><br>
+
 ### December 2
 #### Topic I
 - 💡 [arXiv] [dInfer: An Efficient Inference Framework for Diffusion Language Models](https://arxiv.org/pdf/2510.08666)
 - 🙎‍♂️ Yuxin Ma (Ant Group)
+- [📕 slides](./slides/251202-Dinfer.pdf),[📺 video](https://www.bilibili.com/video/BV1R92VB2EsL?t=4.0)
 
 #### Topic II
 - 💡 [arXiv] [Kimi Linear: An Expressive, Efficient Attention Architecture](https://arxiv.org/pdf/2510.26692)
 - 🙎‍♂️ Ping Gong, Xin Ren
+- [📕 slides](./slides/),[📺 video](https://www.bilibili.com/video/BV1R92VB2EsL?t=4.0)
 <br><br>
 
 ### November 25
