--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -30,7 +30,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic II
 - 💡 [arXiv] [Kimi Linear: An Expressive, Efficient Attention Architecture](https://arxiv.org/pdf/2510.26692)
 - 🙎‍♂️ Ping Gong, Xin Ren
-- [📕 slides](./slides/),[📺 video](https://www.bilibili.com/video/BV1R92VB2EsL?t=4.0)
+- [📕 slides](./slides/251202-KIMI Linear.pdf),[📺 video](https://www.bilibili.com/video/BV1R92VB2EsL?t=4.0)
 <br><br>
 
 ### November 25
