--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -11,10 +11,10 @@
 The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a> as soon as possible.
 
 ## Schedule
-### December 9
+### December 16
 #### Topic I
 - 💡 [arXiv] [NanoFlow: Towards Optimal Large Language Model Serving Throughput](https://arxiv.org/pdf/2408.12757)
-- 🙎‍♂️ Yinhe Chen
+- 🙎‍♂️ Yinhe Chen, Dongqi Tian
 
 #### Topic II
 - 💡 [arXiv] [IC-Cache: Efficient Large Language Model Serving via In-context Caching](https://arxiv.org/pdf/2501.12689)
