--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -9,11 +9,20 @@
 ## Other Information
 
 The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a> as soon as possible.
-
 ## Schedule
+### December 23
+#### Topic I
+- 💡 [arXiv] [LithOS: An Operating System for Efficient Machine Learning on GPUs](https://arxiv.org/pdf/2504.15465)
+- 🙎‍♂️ Qingyuan Chen
+
+#### Topic II
+- 💡 [arXiv] [Tally: Non-Intrusive Performance Isolation for Concurrent Deep Learning Workloads](https://arxiv.org/pdf/2410.07381)
+- 🙎‍♂️ Jiaqi Ruan, Jia He
+<br><br>
+
 ### December 16
 #### Topic I
-- 💡 [arXiv] [NanoFlow: Towards Optimal Large Language Model Serving Throughput](https://arxiv.org/pdf/2408.12757)
+- 💡 [OSDI'25[ [NanoFlow: Towards Optimal Large Language Model Serving Throughput](https://arxiv.org/pdf/2408.12757)
 - 🙎‍♂️ Yinhe Chen, Dongqi Tian
 
 #### Topic II
