--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -12,7 +12,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 ## Schedule
 ### December 23
 #### Topic I
-- 💡 [arXiv] [LithOS: An Operating System for Efficient Machine Learning on GPUs](https://arxiv.org/pdf/2504.15465)
+- 💡 [SOSP'25] [LithOS: An Operating System for Efficient Machine Learning on GPUs](https://arxiv.org/pdf/2504.15465)
 - 🙎‍♂️ Qingyuan Chen
 
 #### Topic II
