--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -12,8 +12,8 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 ## Schedule
 ### December 23
 #### Topic I
-- 💡 [SOSP'25] [LithOS: An Operating System for Efficient Machine Learning on GPUs](https://arxiv.org/pdf/2504.15465)
-- 🙎‍♂️ Qingyuan Chen
+- 💡 [SOSP'25] [KTransformers: Unleashing the Full Potential of CPU/GPU Hybrid Inference for MoE Models](https://dl.acm.org/doi/epdf/10.1145/3731569.3764843)
+- 🙎‍♂️ ZhiHao Le
 
 #### Topic II
 - 💡 [arXiv] [Tally: Non-Intrusive Performance Isolation for Concurrent Deep Learning Workloads](https://arxiv.org/pdf/2410.07381)
