--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -24,10 +24,12 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic I
 - 💡 [OSDI'25[ [NanoFlow: Towards Optimal Large Language Model Serving Throughput](https://arxiv.org/pdf/2408.12757)
 - 🙎‍♂️ Yinhe Chen, Dongqi Tian
+- [📕 slides](./slides/251216_Nanoflow.pdf)
 
 #### Topic II
 - 💡 [arXiv] [IC-Cache: Efficient Large Language Model Serving via In-context Caching](https://arxiv.org/pdf/2501.12689)
 - 🙎‍♂️ Sen Han
+- [📕 slides](./slides/251216_IC-Cache.pdf)
 <br><br>
 
 ### December 2
