--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -22,7 +22,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### December 16
 #### Topic I
-- 💡 [OSDI'25[ [NanoFlow: Towards Optimal Large Language Model Serving Throughput](https://arxiv.org/pdf/2408.12757)
+- 💡 [OSDI'25] [NanoFlow: Towards Optimal Large Language Model Serving Throughput](https://arxiv.org/pdf/2408.12757)
 - 🙎‍♂️ Yinhe Chen, Dongqi Tian
 - [📕 slides](./slides/251216_Nanoflow.pdf)
 
