--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -10,6 +10,16 @@
 
 The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a> as soon as possible.
 ## Schedule
+### December 30
+#### Topic I
+- 💡 [SOSP'25] [HedraRAG: Co-Optimizing Generation and Retrieval for Heterogeneous RAG Workflows](https://dl.acm.org/doi/epdf/10.1145/3731569.3764806)
+- 🙎‍♂️ Chao Bi
+
+#### Topic II
+- 💡 [SOSP'25] [METIS: Fast Quality-Aware RAG Systems with Configuration Adaptation](https://arxiv.org/pdf/2412.10543)
+- 🙎‍♂️ Xiaoqi Li
+<br><br>
+
 ### December 23
 #### Topic I
 - 💡 [SOSP'25] [KTransformers: Unleashing the Full Potential of CPU/GPU Hybrid Inference for MoE Models](https://dl.acm.org/doi/epdf/10.1145/3731569.3764843)
