--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -24,22 +24,25 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic I
 - 💡 [SOSP'25] [KTransformers: Unleashing the Full Potential of CPU/GPU Hybrid Inference for MoE Models](https://dl.acm.org/doi/epdf/10.1145/3731569.3764843)
 - 🙎‍♂️ ZhiHao Le
+- [📕 slides](./slides/),[📺 video](https://www.bilibili.com/video/BV19RBzBaEWp?t=1.2)
 
 #### Topic II
 - 💡 [arXiv] [Tally: Non-Intrusive Performance Isolation for Concurrent Deep Learning Workloads](https://arxiv.org/pdf/2410.07381)
 - 🙎‍♂️ Jiaqi Ruan, Jia He
+- [📕 slides](./slides/),[📺 video](https://www.bilibili.com/video/BV19RBzBaEWp?t=1.2)
+
 <br><br>
 
 ### December 16
 #### Topic I
 - 💡 [OSDI'25] [NanoFlow: Towards Optimal Large Language Model Serving Throughput](https://arxiv.org/pdf/2408.12757)
 - 🙎‍♂️ Yinhe Chen, Dongqi Tian
-- [📕 slides](./slides/251216_Nanoflow.pdf)
+- [📕 slides](./slides/251216_Nanoflow.pdf),[📺 video](https://www.bilibili.com/video/BV15RBzBYEhu?t=1.0)
 
 #### Topic II
 - 💡 [arXiv] [IC-Cache: Efficient Large Language Model Serving via In-context Caching](https://arxiv.org/pdf/2501.12689)
 - 🙎‍♂️ Sen Han
-- [📕 slides](./slides/251216_IC-Cache.pdf)
+- [📕 slides](./slides/251216_IC-Cache.pdf),[📺 video](https://www.bilibili.com/video/BV15RBzBYEhu?t=1.0)
 <br><br>
 
 ### December 2
