--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -10,6 +10,16 @@
 
 The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a> as soon as possible.
 ## Schedule
+### January 6
+#### Topic I
+- 💡 [SOSP'25] [Jenga: Effective Memory Management for Serving LLM with Heterogeneity](https://arxiv.org/pdf/2503.18292)
+- 🙎‍♂️ Mingxuan Liu (Northwestern Polytechnical University)
+
+#### Topic II
+- 💡 [arXiv] [Prism: Unleashing GPU Sharing for Cost-Efficient Multi-LLM Serving](https://arxiv.org/pdf/2505.04021)
+- 🙎‍♂️ Mingxuan Liu (Northwestern Polytechnical University)
+<br><br>
+
 ### December 30
 #### Topic I
 - 💡 [SOSP'25] [HedraRAG: Co-Optimizing Generation and Retrieval for Heterogeneous RAG Workflows](https://dl.acm.org/doi/epdf/10.1145/3731569.3764806)
