--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -10,6 +10,16 @@
 
 The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a> as soon as possible.
 ## Schedule
+### January 13
+#### Topic I
+- 💡 [arXiv] [REFRAG: Rethinking RAG based Decoding](https://arxiv.org/pdf/2509.01092)
+- 🙎‍♂️ Bosen Yang
+
+#### Topic II
+- 💡 [SOSP'25] [TrainVerify: Equivalence-Based Verification for Distributed LLM Training](https://arxiv.org/pdf/2506.15961)
+- 🙎‍♂️ Chenhan Wang, Luofan Chen
+<br><br>
+
 ### January 6
 #### Topic I
 - 💡 [SOSP'25] [Jenga: Effective Memory Management for Serving LLM with Heterogeneity](https://arxiv.org/pdf/2503.18292)
