--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -10,6 +10,16 @@
 
 The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a> as soon as possible.
 ## Schedule
+### January 20
+#### Topic I
+- 💡 [SOSP'25] [DiffKV: Differentiated Memory Management for Large Language Models with Parallel KV Compaction](https://arxiv.org/pdf/2412.03131)
+- 🙎‍♂️ Chengru Yang, Jiawei Yi
+
+#### Topic II
+- 💡 [SOSP'25] [LithOS: An Operating System for Efficient Machine Learning on GPUs](https://arxiv.org/pdf/2504.15465)
+- 🙎‍♂️ Qingyuan Chen
+<br><br>
+
 ### January 13
 #### Topic I
 - 💡 [arXiv] [REFRAG: Rethinking RAG based Decoding](https://arxiv.org/pdf/2509.01092)
