--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -14,30 +14,36 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic I
 - 💡 [SOSP'25] [DiffKV: Differentiated Memory Management for Large Language Models with Parallel KV Compaction](https://arxiv.org/pdf/2412.03131)
 - 🙎‍♂️ Chengru Yang, Jiawei Yi
+- [📺 video](https://www.bilibili.com/video/BV1AGzgBYEaV?t=1274.6)
 
 #### Topic II
 - 💡 [SOSP'25] [LithOS: An Operating System for Efficient Machine Learning on GPUs](https://arxiv.org/pdf/2504.15465)
 - 🙎‍♂️ Qingyuan Chen
+- [📺 video](https://www.bilibili.com/video/BV1AGzgBYEaV?t=1274.6)
 <br><br>
 
 ### January 13
 #### Topic I
 - 💡 [arXiv] [REFRAG: Rethinking RAG based Decoding](https://arxiv.org/pdf/2509.01092)
 - 🙎‍♂️ Bosen Yang
+- [📺 video](https://www.bilibili.com/video/BV16nrsBgEu6?t=1.1)
 
 #### Topic II
 - 💡 [SOSP'25] [TrainVerify: Equivalence-Based Verification for Distributed LLM Training](https://arxiv.org/pdf/2506.15961)
 - 🙎‍♂️ Chenhan Wang, Luofan Chen
+- [📺 video](https://www.bilibili.com/video/BV16nrsBgEu6?t=1.1)
 <br><br>
 
 ### January 6
 #### Topic I
 - 💡 [SOSP'25] [Jenga: Effective Memory Management for Serving LLM with Heterogeneity](https://arxiv.org/pdf/2503.18292)
 - 🙎‍♂️ Mingxuan Liu (Northwestern Polytechnical University)
+- [📺 video](https://www.bilibili.com/video/BV16HrsBzE3Z?t=6.7)
 
 #### Topic II
 - 💡 [arXiv] [Prism: Unleashing GPU Sharing for Cost-Efficient Multi-LLM Serving](https://arxiv.org/pdf/2505.04021)
 - 🙎‍♂️ Mingxuan Liu (Northwestern Polytechnical University)
+- [📺 video](https://www.bilibili.com/video/BV16HrsBzE3Z?t=6.7)
 <br><br>
 
 ### December 30
