--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -62,7 +62,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic I
 - 💡 [SOSP'25] [KTransformers: Unleashing the Full Potential of CPU/GPU Hybrid Inference for MoE Models](https://dl.acm.org/doi/epdf/10.1145/3731569.3764843)
 - 🙎‍♂️ ZhiHao Le
-c
+- [📕 slides](./slides/),[📺 video](https://www.bilibili.com/video/BV19RBzBaEWp?t=1.2)
 
 #### Topic II
 - 💡 [arXiv] [Tally: Non-Intrusive Performance Isolation for Concurrent Deep Learning Workloads](https://arxiv.org/pdf/2410.07381)
