--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -26,7 +26,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic I
 - 💡 [arXiv] [REFRAG: Rethinking RAG based Decoding](https://arxiv.org/pdf/2509.01092)
 - 🙎‍♂️ Bosen Yang
-- [📺 video](https://www.bilibili.com/video/BV16nrsBgEu6?t=1.1)
+- [📕 slides](./slides/)[📺 video](https://www.bilibili.com/video/BV16nrsBgEu6?t=1.1)
 
 #### Topic II
 - 💡 [SOSP'25] [TrainVerify: Equivalence-Based Verification for Distributed LLM Training](https://arxiv.org/pdf/2506.15961)
@@ -38,24 +38,24 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic I
 - 💡 [SOSP'25] [Jenga: Effective Memory Management for Serving LLM with Heterogeneity](https://arxiv.org/pdf/2503.18292)
 - 🙎‍♂️ Mingxuan Liu (Northwestern Polytechnical University)
-- [📺 video](https://www.bilibili.com/video/BV16HrsBzE3Z?t=6.7)
+- [📕 slides](./slides/260106-Jenga.pdf),[📺 video](https://www.bilibili.com/video/BV16HrsBzE3Z?t=6.7)
 
 #### Topic II
 - 💡 [arXiv] [Prism: Unleashing GPU Sharing for Cost-Efficient Multi-LLM Serving](https://arxiv.org/pdf/2505.04021)
 - 🙎‍♂️ Mingxuan Liu (Northwestern Polytechnical University)
-- [📺 video](https://www.bilibili.com/video/BV16HrsBzE3Z?t=6.7)
+- [📕 slides](./slides/260106-Prism.pdf),[📺 video](https://www.bilibili.com/video/BV16HrsBzE3Z?t=6.7)
 <br><br>
 
 ### December 30
 #### Topic I
 - 💡 [SOSP'25] [HedraRAG: Co-Optimizing Generation and Retrieval for Heterogeneous RAG Workflows](https://dl.acm.org/doi/epdf/10.1145/3731569.3764806)
 - 🙎‍♂️ Chao Bi
-- [📺 video](https://www.bilibili.com/video/BV155qcBpEeC?t=1.4)
+- [📕 slides](./slides/251230-HedraRAG),[📺 video](https://www.bilibili.com/video/BV155qcBpEeC?t=1.4)
 
 #### Topic II
 - 💡 [SOSP'25] [METIS: Fast Quality-Aware RAG Systems with Configuration Adaptation](https://arxiv.org/pdf/2412.10543)
 - 🙎‍♂️ Xiaoqi Li
-- [📺 video](https://www.bilibili.com/video/BV155qcBpEeC?t=1.4)
+- [📕 slides](./slides/251230-METIS),[📺 video](https://www.bilibili.com/video/BV155qcBpEeC?t=1.4)
 <br><br>
 
 ### December 23
@@ -67,7 +67,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic II
 - 💡 [arXiv] [Tally: Non-Intrusive Performance Isolation for Concurrent Deep Learning Workloads](https://arxiv.org/pdf/2410.07381)
 - 🙎‍♂️ Jiaqi Ruan, Jia He
-- [📕 slides](./slides/),[📺 video](https://www.bilibili.com/video/BV19RBzBaEWp?t=1.2)
+- [📕 slides](./slides/251223-Tally),[📺 video](https://www.bilibili.com/video/BV19RBzBaEWp?t=1.2)
 <br><br>
 
 ### December 16
