--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -50,24 +50,24 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic I
 - 💡 [SOSP'25] [HedraRAG: Co-Optimizing Generation and Retrieval for Heterogeneous RAG Workflows](https://dl.acm.org/doi/epdf/10.1145/3731569.3764806)
 - 🙎‍♂️ Chao Bi
-- [📕 slides](./slides/251230-HedraRAG),[📺 video](https://www.bilibili.com/video/BV155qcBpEeC?t=1.4)
+- [📕 slides](./slides/251230-HedraRAG.pdf),[📺 video](https://www.bilibili.com/video/BV155qcBpEeC?t=1.4)
 
 #### Topic II
 - 💡 [SOSP'25] [METIS: Fast Quality-Aware RAG Systems with Configuration Adaptation](https://arxiv.org/pdf/2412.10543)
 - 🙎‍♂️ Xiaoqi Li
-- [📕 slides](./slides/251230-METIS),[📺 video](https://www.bilibili.com/video/BV155qcBpEeC?t=1.4)
+- [📕 slides](./slides/251230-METIS.pdf),[📺 video](https://www.bilibili.com/video/BV155qcBpEeC?t=1.4)
 <br><br>
 
 ### December 23
 #### Topic I
 - 💡 [SOSP'25] [KTransformers: Unleashing the Full Potential of CPU/GPU Hybrid Inference for MoE Models](https://dl.acm.org/doi/epdf/10.1145/3731569.3764843)
 - 🙎‍♂️ ZhiHao Le
-- [📕 slides](./slides/),[📺 video](https://www.bilibili.com/video/BV19RBzBaEWp?t=1.2)
+- [📕 slides](./slides/251223-KTransformer.pdf),[📺 video](https://www.bilibili.com/video/BV19RBzBaEWp?t=1.2)
 
 #### Topic II
 - 💡 [arXiv] [Tally: Non-Intrusive Performance Isolation for Concurrent Deep Learning Workloads](https://arxiv.org/pdf/2410.07381)
 - 🙎‍♂️ Jiaqi Ruan, Jia He
-- [📕 slides](./slides/251223-Tally),[📺 video](https://www.bilibili.com/video/BV19RBzBaEWp?t=1.2)
+- [📕 slides](./slides/251223-Tally.pdf),[📺 video](https://www.bilibili.com/video/BV19RBzBaEWp?t=1.2)
 <br><br>
 
 ### December 16
