--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -26,7 +26,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic I
 - 💡 [arXiv] [REFRAG: Rethinking RAG based Decoding](https://arxiv.org/pdf/2509.01092)
 - 🙎‍♂️ Bosen Yang
-- [📕 slides](./slides/)[📺 video](https://www.bilibili.com/video/BV16nrsBgEu6?t=1.1)
+- [📕 slides](./slides/.pdf), [📺 video](https://www.bilibili.com/video/BV16nrsBgEu6?t=1.1)
 
 #### Topic II
 - 💡 [SOSP'25] [TrainVerify: Equivalence-Based Verification for Distributed LLM Training](https://arxiv.org/pdf/2506.15961)
@@ -38,102 +38,102 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic I
 - 💡 [SOSP'25] [Jenga: Effective Memory Management for Serving LLM with Heterogeneity](https://arxiv.org/pdf/2503.18292)
 - 🙎‍♂️ Mingxuan Liu (Northwestern Polytechnical University)
-- [📕 slides](./slides/260106-Jenga.pdf),[📺 video](https://www.bilibili.com/video/BV16HrsBzE3Z?t=6.7)
+- [📕 slides](./slides/260106-Jenga.pdf), [📺 video](https://www.bilibili.com/video/BV16HrsBzE3Z?t=6.7)
 
 #### Topic II
 - 💡 [arXiv] [Prism: Unleashing GPU Sharing for Cost-Efficient Multi-LLM Serving](https://arxiv.org/pdf/2505.04021)
 - 🙎‍♂️ Mingxuan Liu (Northwestern Polytechnical University)
-- [📕 slides](./slides/260106-Prism.pdf),[📺 video](https://www.bilibili.com/video/BV16HrsBzE3Z?t=6.7)
+- [📕 slides](./slides/260106-Prism.pdf), [📺 video](https://www.bilibili.com/video/BV16HrsBzE3Z?t=6.7)
 <br><br>
 
 ### December 30
 #### Topic I
 - 💡 [SOSP'25] [HedraRAG: Co-Optimizing Generation and Retrieval for Heterogeneous RAG Workflows](https://dl.acm.org/doi/epdf/10.1145/3731569.3764806)
 - 🙎‍♂️ Chao Bi
-- [📕 slides](./slides/251230-HedraRAG.pdf),[📺 video](https://www.bilibili.com/video/BV155qcBpEeC?t=1.4)
+- [📕 slides](./slides/251230-HedraRAG.pdf), [📺 video](https://www.bilibili.com/video/BV155qcBpEeC?t=1.4)
 
 #### Topic II
 - 💡 [SOSP'25] [METIS: Fast Quality-Aware RAG Systems with Configuration Adaptation](https://arxiv.org/pdf/2412.10543)
 - 🙎‍♂️ Xiaoqi Li
-- [📕 slides](./slides/251230-METIS.pdf),[📺 video](https://www.bilibili.com/video/BV155qcBpEeC?t=1.4)
+- [📕 slides](./slides/251230-METIS.pdf), [📺 video](https://www.bilibili.com/video/BV155qcBpEeC?t=1.4)
 <br><br>
 
 ### December 23
 #### Topic I
 - 💡 [SOSP'25] [KTransformers: Unleashing the Full Potential of CPU/GPU Hybrid Inference for MoE Models](https://dl.acm.org/doi/epdf/10.1145/3731569.3764843)
 - 🙎‍♂️ ZhiHao Le
-- [📕 slides](./slides/251223-KTransformer.pdf),[📺 video](https://www.bilibili.com/video/BV19RBzBaEWp?t=1.2)
+- [📕 slides](./slides/251223-KTransformer.pdf), [📺 video](https://www.bilibili.com/video/BV19RBzBaEWp?t=1.2)
 
 #### Topic II
 - 💡 [arXiv] [Tally: Non-Intrusive Performance Isolation for Concurrent Deep Learning Workloads](https://arxiv.org/pdf/2410.07381)
 - 🙎‍♂️ Jiaqi Ruan, Jia He
-- [📕 slides](./slides/251223-Tally.pdf),[📺 video](https://www.bilibili.com/video/BV19RBzBaEWp?t=1.2)
+- [📕 slides](./slides/251223-Tally.pdf), [📺 video](https://www.bilibili.com/video/BV19RBzBaEWp?t=1.2)
 <br><br>
 
 ### December 16
 #### Topic I
 - 💡 [OSDI'25] [NanoFlow: Towards Optimal Large Language Model Serving Throughput](https://arxiv.org/pdf/2408.12757)
 - 🙎‍♂️ Yinhe Chen, Dongqi Tian
-- [📕 slides](./slides/251216_Nanoflow.pdf),[📺 video](https://www.bilibili.com/video/BV15RBzBYEhu?t=1.0)
+- [📕 slides](./slides/251216_Nanoflow.pdf), [📺 video](https://www.bilibili.com/video/BV15RBzBYEhu?t=1.0)
 
 #### Topic II
 - 💡 [arXiv] [IC-Cache: Efficient Large Language Model Serving via In-context Caching](https://arxiv.org/pdf/2501.12689)
 - 🙎‍♂️ Sen Han
-- [📕 slides](./slides/251216_IC-Cache.pdf),[📺 video](https://www.bilibili.com/video/BV15RBzBYEhu?t=1.0)
+- [📕 slides](./slides/251216_IC-Cache.pdf), [📺 video](https://www.bilibili.com/video/BV15RBzBYEhu?t=1.0)
 <br><br>
 
 ### December 2
 #### Topic I
 - 💡 [arXiv] [dInfer: An Efficient Inference Framework for Diffusion Language Models](https://arxiv.org/pdf/2510.08666)
 - 🙎‍♂️ Yuxin Ma (Ant Group)
-- [📕 slides](./slides/251202-Dinfer.pdf),[📺 video](https://www.bilibili.com/video/BV1R92VB2EsL?t=4.0)
+- [📕 slides](./slides/251202-Dinfer.pdf), [📺 video](https://www.bilibili.com/video/BV1R92VB2EsL?t=4.0)
 
 #### Topic II
 - 💡 [arXiv] [Kimi Linear: An Expressive, Efficient Attention Architecture](https://arxiv.org/pdf/2510.26692)
 - 🙎‍♂️ Ping Gong, Xin Ren
-- [📕 slides](./slides/251202-KIMILinear.pdf),[📺 video](https://www.bilibili.com/video/BV1R92VB2EsL?t=4.0)
+- [📕 slides](./slides/251202-KIMILinear.pdf), [📺 video](https://www.bilibili.com/video/BV1R92VB2EsL?t=4.0)
 <br><br>
 
 ### November 25
 #### Topic I
 - 💡 [ROLL: An Efficient and User-Friendly Scaling Library for Reinforcement Learning with Large Language Models](https://github.com/alibaba/ROLL)
 - 🙎‍♂️ Wei Gao (Alibaba ROLL)
-- [📕 slides](./slides/251125_ROLL.pdf),[📺 video](https://www.bilibili.com/video/BV1uxUzBUED4?t=9.2)
+- [📕 slides](./slides/251125_ROLL.pdf), [📺 video](https://www.bilibili.com/video/BV1uxUzBUED4?t=9.2)
 
 #### Topic II
 - 💡 [SOSP '25] [Spirit: Fair Allocation of Interdependent Resources in Remote Memory Systems](https://dl.acm.org/doi/pdf/10.1145/3731569.3764805)
 - 🙎‍♂️ Yicheng Zhang
-- [📕 slides](./slides/251125_Spirit.pdf),[📺 video](https://www.bilibili.com/video/BV19JUzBXEM2)
+- [📕 slides](./slides/251125_Spirit.pdf), [📺 video](https://www.bilibili.com/video/BV19JUzBXEM2)
 <br><br>
 
 ### November 18
 #### Topic I
 - 💡 [arXiv] [HydraServe: Minimizing Cold Start Latency for Serverless LLM Serving in Public Clouds](https://arxiv.org/pdf/2502.15524v2)
 - 🙎‍♂️ Jiyang Wang
-- [📕 slides](./slides/251118_HydraServer.pdf),[📺 video](https://www.bilibili.com/video/BV1SzUsBkEXQ?t=0.8)
+- [📕 slides](./slides/251118_HydraServer.pdf), [📺 video](https://www.bilibili.com/video/BV1SzUsBkEXQ?t=0.8)
 
 #### Topic II
 - 💡 [SOSP '25] [Pie: A Programmable Serving System for Emerging LLM Applications](https://www.yecl.org/publications/gim2025sosp.pdf)
 - 🙎‍♂️ Shen Fu, Zewen Jin
-- [📕 slides](./slides/20251118_Pie.pdf),[📺 video](https://www.bilibili.com/video/BV1SzUsBkEXQ?t=0.8)
+- [📕 slides](./slides/20251118_Pie.pdf), [📺 video](https://www.bilibili.com/video/BV1SzUsBkEXQ?t=0.8)
 <br><br>
 
 ### November 11
 - 💡 [arXiv] [FalconFS: Distributed File System for Large-Scale Deep Learning Pipeline](https://arxiv.org/pdf/2507.10367)
 - 🙎‍♂️ chi zhang，Jiahao Li
-- [📕 slides](./slides/251111-FalconFS.pdf),[📺 video](https://www.bilibili.com/video/BV1pHCEBAEWN?t=2.4)
+- [📕 slides](./slides/251111-FalconFS.pdf), [📺 video](https://www.bilibili.com/video/BV1pHCEBAEWN?t=2.4)
 <br><br>
 
 ### November 4
 #### Topic I
 - 💡 [OSDI'25] [Enabling Efficient GPU Communication over Multiple NICs with FuseLink](https://www.usenix.org/system/files/osdi25-ren.pdf)
 - 🙎‍♂️ Haiquan Wang, Tonghuan Xiao, Jiahui Tan
-- [📕 slides](./slides/251104-FuseLink.pdf),[📺 video](https://www.bilibili.com/video/BV1mbkRBgEJr)
+- [📕 slides](./slides/251104-FuseLink.pdf), [📺 video](https://www.bilibili.com/video/BV1mbkRBgEJr)
 
 #### Topic II
 - 💡 [arXiv] [Fast-dLLM v2: Efficient Block-Diffusion LLM](https://arxiv.org/pdf/2509.26328)
 - 🙎‍♂️ Xiliang Xian
-- [📕 slides](./slides/251104-FastDLLMv2.pdf),[📺 video](https://www.bilibili.com/video/BV1mbkRBgEJr)
+- [📕 slides](./slides/251104-FastDLLMv2.pdf), [📺 video](https://www.bilibili.com/video/BV1mbkRBgEJr)
 <br><br>
 
 ### October 28
