--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -26,7 +26,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic I
 - 💡 [arXiv] [REFRAG: Rethinking RAG based Decoding](https://arxiv.org/pdf/2509.01092)
 - 🙎‍♂️ Bosen Yang
-- [📕 slides](./slides/.pdf), [📺 video](https://www.bilibili.com/video/BV16nrsBgEu6?t=1.1)
+- [📕 slides](./slides/260113-REFRAG.pdf), [📺 video](https://www.bilibili.com/video/BV16nrsBgEu6?t=1.1)
 
 #### Topic II
 - 💡 [SOSP'25] [TrainVerify: Equivalence-Based Verification for Distributed LLM Training](https://arxiv.org/pdf/2506.15961)
