--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -101,7 +101,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - [📕 slides](./slides/251125_ROLL.pdf), [📺 video](https://www.bilibili.com/video/BV1uxUzBUED4?t=9.2)
 
 #### Topic II
-- 💡 [SOSP '25] [Spirit: Fair Allocation of Interdependent Resources in Remote Memory Systems](https://dl.acm.org/doi/pdf/10.1145/3731569.3764805)
+- 💡 [SOSP'25] [Spirit: Fair Allocation of Interdependent Resources in Remote Memory Systems](https://dl.acm.org/doi/pdf/10.1145/3731569.3764805)
 - 🙎‍♂️ Yicheng Zhang
 - [📕 slides](./slides/251125_Spirit.pdf), [📺 video](https://www.bilibili.com/video/BV19JUzBXEM2)
 <br><br>
@@ -113,7 +113,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - [📕 slides](./slides/251118_HydraServer.pdf), [📺 video](https://www.bilibili.com/video/BV1SzUsBkEXQ?t=0.8)
 
 #### Topic II
-- 💡 [SOSP '25] [Pie: A Programmable Serving System for Emerging LLM Applications](https://www.yecl.org/publications/gim2025sosp.pdf)
+- 💡 [SOSP'25] [Pie: A Programmable Serving System for Emerging LLM Applications](https://www.yecl.org/publications/gim2025sosp.pdf)
 - 🙎‍♂️ Shen Fu, Zewen Jin
 - [📕 slides](./slides/20251118_Pie.pdf), [📺 video](https://www.bilibili.com/video/BV1SzUsBkEXQ?t=0.8)
 <br><br>
@@ -153,7 +153,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 ### September 29
 
 - ✨ SOSP Rehearsal
-- 💡 Mantle: Efficient Hierarchical Metadata Management for Cloud Object Storage Services
+- 💡 [SOSP'25] [Mantle: Efficient Hierarchical Metadata Management for Cloud Object Storage Services](https://dl.acm.org/doi/epdf/10.1145/3731569.3764824)
 - 🙎‍♂️ Jiahao Li
 <br><br>
 
