--- a/src/2025_fall.md
+++ b/src/2025_fall.md
@@ -14,7 +14,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 #### Topic I
 - 💡 [SOSP'25] [DiffKV: Differentiated Memory Management for Large Language Models with Parallel KV Compaction](https://arxiv.org/pdf/2412.03131)
 - 🙎‍♂️ Chengru Yang, Jiawei Yi
-- [📺 video](https://www.bilibili.com/video/BV1AGzgBYEaV?t=1274.6)
+- [📕 slides](./slides/260120-Diffkv.pdf), [📺 video](https://www.bilibili.com/video/BV1AGzgBYEaV?t=1274.6)
 
 #### Topic II
 - 💡 [SOSP'25] [LithOS: An Operating System for Efficient Machine Learning on GPUs](https://arxiv.org/pdf/2504.15465)
